--- a/style.css
+++ b/style.css
@@ -8,21 +8,33 @@ body{
 
 .smet{
     width: 100%;
-    height: 100vh;
+    height: 1065px;
     padding-top: 60px;
     display: inline-flex;
     justify-content: space-around;
 }
 
 .content{
-    display: flex;
-    flex-direction: column;
+    width: 960px;
 }
 
 .main_illustration{
-    width: 959px;
     height: 600px;
     object-fit: contain;
+}
+ 
+.red_but{
+    width: 200px;
+    height: 56px;
+    display: block;
+    object-fit: contain;
+    border-radius: 7px;
+    background-color: #dc2327;
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 2.06;
+    text-align: center;
+    color: #ffffff;
 }
 
 .logo{
@@ -39,6 +51,7 @@ body{
     height: 13px;
     object-fit: contain;
 }
+
 .donate{
     width: 183px;
     height: 40px;
@@ -52,7 +65,6 @@ body{
 }
 
 .big_text{
-    margin: 30px;
     font-size: 60px;
     font-weight: bold;
     line-height: 1.03;
@@ -71,7 +83,6 @@ body{
 }
 
 .regular_text{
-    width: 830px;
     opacity: 0.7;
     font-size: 18px;
     font-weight: normal;
@@ -79,4 +90,28 @@ body{
     letter-spacing: normal;
     text-align: center;
     color: #000000;
+}
+
+.midle_block{
+    width: 100%;
+    height: 1208px;
+    background-color: #f0f4f8;
+}
+.midle_block::before, .midle_block::after{
+    content: ' ';
+    clear: both;
+    display: table;
+}
+
+.sock{
+    position: absolute;
+    top: 0;
+    right: -100px;
+    width: 167px;
+    object-fit: contain;
+}
+
+.last_block{
+    width: 100%;
+    height: 926px;
 }
